worked on warnings in test cases.